z-index fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ body {
   margin: auto;
   font-size: 8rem;
   font-weight: 600;
-  z-index: 50;
+  z-index: 10;
 }
 
 #clock {
@@ -228,7 +228,7 @@ body {
   left: 3vw;
   opacity: 0.6;
   transition: 0.4s ease-out;
-  z-index: 50;
+  z-index: 10;
 }
 
 #todo-open:hover,
@@ -250,7 +250,7 @@ body {
   position: absolute;
   left: 3vw;
   bottom: 20vh;
-  z-index: 1;
+  z-index: 20;
   overflow-y: scroll;
   scrollbar-width: none;
 }
@@ -452,7 +452,7 @@ body {
   opacity: 0.6;
   transition: transform 0.5s ease;
   transition: 0.4s ease-out;
-  z-index: 50;
+  z-index: 10;
 }
 
 .rotate {
